Added url links to project websites.

--- a/_posts/2014-12-28-nasdome.md
+++ b/_posts/2014-12-28-nasdome.md
@@ -8,7 +8,7 @@ project-date: November 2014
 client: National Academy of Sciences
 client_url: http://www.nasonline.org
 category: Mobile Development
-description: Ported an existing XCode project to Unity3D and continued to extend functionality. Final release expected in February 2015.
+description: Ported an existing XCode project to Unity3D and continued to extend functionality. Final release expected in February 2015. Current version available <a href="http://nasdome.com">here</a>.
 
 ---
 
