--- a/_posts/2014-12-28-deku.md
+++ b/_posts/2014-12-28-deku.md
@@ -8,7 +8,7 @@ project-date: February 2014
 client: Shawn Squire
 client_url: \#
 category: Web Development
-description: Created a small social networking site from scratch using Flask, Bootstrap and other libraries. A university software engineering project.
+description: Created a small social networking site from scratch using Flask, Bootstrap and other libraries. A university software engineering project. Code available <a href="http://github.com/sdroadie/deku">here</a>.
 
 ---
 
