Added index page for poems and removed them from blog list.

--- a/_posts/2015-08-18-led.md
+++ b/_posts/2015-08-18-led.md
@@ -1,9 +1,8 @@
 ---
 layout: poem
-title: Oklahoma
+title: LED
 category: poem
 tags: [poem, sleep]
-no_excerpt: true
 ---
 
 This should feel tighter.
