--- a/_posts/2015-08-18-led.md
+++ b/_posts/2015-08-18-led.md
@@ -2,8 +2,12 @@
 layout: poem
 title: LED
 category: poem
-tags: [poem, sleep]
+tags: 
+  - poem
+  - sleep
+published: true
 ---
+
 
 This should feel tighter.
 This envelope
@@ -15,5 +19,5 @@ pulling me from pleasant dreams to worldly concerns.
 Events unfolding far away, 
 at the edges of natural perception.
 
-Yet they tear you away from the shapeless void of slumber
+Yet they tear you away from the shapeless void of slumber,
 unlikely to release.
