--- a/_posts/2015-08-18-burn.md
+++ b/_posts/2015-08-18-burn.md
@@ -7,6 +7,14 @@ tags:
   - "poem - loss - anger"
 ---
 
-## A New Post
+Hand me the lighter.
+I need you to burn
+as I do.
+As we all do.
+First hot, fast, passionate.
+Then slow, smoldering, distant.
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+All I see in you is smoke.
+All you see in me are embers.
+A faint reminder of the warmth we once shared
+And the hopes we once held.
