--- a/_posts/2015-08-18-burn.md
+++ b/_posts/2015-08-18-burn.md
@@ -1,11 +1,12 @@
 ---
-published: false
+published: true
 layout: poem
 category: poem
 title: Burn
 tags: 
   - "poem - loss - anger"
 ---
+
 
 Hand me the lighter.
 I need you to burn
