--- a/_posts/2015-08-18-tell-me.md
+++ b/_posts/2015-08-18-tell-me.md
@@ -1,5 +1,5 @@
 ---
-published: false
+published: true
 title: Tell Me
 category: poem
 layout: poem
@@ -7,7 +7,8 @@ tags:
   - "peom - feels"
 ---
 
-Tell m agin, how is your pain more significant?
+
+Tell me again, how is your pain more significant?
 
 How is it more transcendent?
 
@@ -17,10 +18,10 @@ How do you feel more than do?
 How are you more sensitive?
 
 Please flash before my eyes,
-why do despise more for going through what I do?
+why do despise me for going through what I do?
 
 Why is your experience more relevant?
-Why about you makes it more true?
+What about you makes it more true?
 
 Who are you to accuse me of making up feeling full,
 inflating my emotions?
