--- a/_posts/2015-08-19-night-owl.md
+++ b/_posts/2015-08-19-night-owl.md
@@ -1,5 +1,5 @@
 ---
-published: false
+published: true
 layout: poem
 title: Night Owl
 category: poem
@@ -8,6 +8,7 @@ tags:
   - night
   - sleep
 ---
+
 
 Tick.
 You keep 
