--- a/_posts/2015-08-19-gauze.md
+++ b/_posts/2015-08-19-gauze.md
@@ -1,5 +1,5 @@
 ---
-published: false
+published: true
 layout: poem
 category: poem
 title: Gauze
@@ -7,6 +7,7 @@ tags:
   - poem
   - fixer
 ---
+
 
 Hold this thread.
 TIGHTER!
