--- a/_posts/2015-08-18-tell-me.md
+++ b/_posts/2015-08-18-tell-me.md
@@ -3,8 +3,11 @@ published: true
 title: Tell Me
 category: poem
 layout: poem
-tags: [poem, feels]
+tags: 
+  - poem
+  - feels
 ---
+
 
 
 Tell me again, how is your pain more significant?
@@ -57,6 +60,3 @@ a manufactured shadow of reality.
 
 Let go, try to relax, sit back.
 Let it happen as it will.
-
-Maybe you'll find what you will,
-or maybe you'll find hell.
